# snarl_project_cxx

./: .gitignore  CMakeLists.txt  README.md  outputtest.tsv
output/: binary_output.tsv
src/: LinearRegression.cpp  LinearRegression.hpp  Makefile  arg_parser.cpp  arg_parser.hpp  binary_analysis.cpp  binary_analysis.hpp  list_snarl_paths.cpp  list_snarl_paths.hpp  main.cpp  matrix.cpp  matrix.hpp  output  quantitative_analysis.cpp  quantitative_analysis.hpp  slink  snarl_parser.cpp  snarl_parser.hpp  snarl_project  vcf_parser.cpp  vcf_parser.hpp
src/output/: genotype.bed  genotype.bim  genotype.fam
test/: big_vcf.vcf  group.txt  list_snarl_short.txt  small_vcf.vcf  snarl_parser.cpp  test  test.cpp  test2  test2.cpp  test_group.txt  test_parser  test_program  vcf_parser.cpp  vcf_parser.hpp
